# fit

./: .env.bench.example  .gitignore  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.coach  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml
py/: pyproject.toml
py/examples/: sample_advisor.json  serve_advisor.py  train_advisor.py
py/src/fit/: bus.py  (+7 more)
py/tests/: test_adapter_conformance.py  test_adapter_review_regressions.py  test_advisor.py  test_bench_ab.py  test_bench_cli.py  test_bench_harness.py  test_bench_proxy.py  test_bench_proxy_integration.py  test_bench_setup.py  test_bench_suites.py  test_bench_tracing.py  test_bus.py  test_composite_scorer.py  test_composite_scorer_null_regressions.py  test_conformance.py  test_dataset.py  test_export.py  test_frontier_output_regressions.py  test_grpo.py  test_pr26_review_regressions.py  test_pr27_review_regressions.py  test_pr35_review_regressions.py  test_pr36_review_regressions.py  test_pr37_review_regressions.py  test_pr38_review_regressions.py  test_pr39_review_regressions.py  test_pr40_review_regressions.py  test_pr41_review_regressions.py  test_pr42_review_regressions.py  test_pr43_review_regressions.py  test_pr43_tracer_regression.py  test_pr44_review_regressions.py  test_pr45_review_regressions.py  test_pr46_review_regressions.py  test_pr47_review_regressions.py  test_pr48_review_regressions.py  test_remote_advisor.py  test_reward_fn.py  test_serve_advisor.py  test_session.py  (+8 more)
rs/: Cargo.toml
rs/src/: adapter.rs  advisor.rs  error.rs  lib.rs  reward.rs  session.rs  trace.rs
rs/tests/: advisor_regressions_test.rs  btree_deterministic_regressions_test.rs  conformance.rs  float_comparison_regressions_test.rs  (+4 more)
(+162 files in other folders)
