[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hop-top-fit"
version = "0.1.0"
description = "Train small advisor models to steer black-box LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]
adapters = ["anthropic>=0.30", "openai>=1.30"]

[tool.hatch.build.targets.wheel]
packages = ["src/fit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests needing network/large downloads (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU/torch (deselect with '-m \"not gpu\"')",
]
