[package]
name = "hop-top-fit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Train small advisor models to steer black-box LLMs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
